--- a/Bmi_UW.html
+++ b/Bmi_UW.html
@@ -294,7 +294,7 @@
   <div class="row ">
     <div class="col-md-6">
       <div class="media blog-media">
-        <a href="./Uweight/post1.html"><img class="d-flex"  width="400"height="260"src="./images/Uweight/undwt_1.jpg" alt="Generic placeholder image"></a>
+        <a href="./Uweight/post1.html"><img class="d-flex"  style="width:300px;height:260px" src="./images/Uweight/undwt_1.jpg" alt="Generic placeholder image"></a>
         <!-- <div class="circle">
           <h5 class="day">08</h5>
           <span class="month">July</span>
@@ -308,7 +308,7 @@
     </div>
     <div class="col-md-6">
       <div class="media blog-media">
-        <a href="./Uweight/post2.html"><img class="d-flex" src="./images/Uweight/undwt_2.jpg" width="400"height="260" alt="Generic placeholder image"></a>
+        <a href="./Uweight/post2.html"><img class="d-flex" src="./images/Uweight/undwt_2.jpg" style="width:300px;height:260px" alt="Generic placeholder image"></a>
         <!-- <div class="circle">
             <h5 class="day">08</h5>
             <span class="month">July</span>
@@ -322,7 +322,7 @@
     </div>
     <div class="col-md-6">
       <div class="media blog-media">
-        <a href="./Uweight/post3.html"><img width="400"height="260" class="d-flex" src="./images/Uweight/undwt_3.jpg" alt="Generic placeholder image"></a>
+        <a href="./Uweight/post3.html"><img style="width:300px;height:260px" class="d-flex" src="./images/Uweight/undwt_3.jpg" alt="Generic placeholder image"></a>
         <!-- <div class="circle">
             <h5 class="day">08</h5>
             <span class="month">July</span>
@@ -336,7 +336,7 @@
     </div>
     <div class="col-md-6">
       <div class="media blog-media">
-        <a href="./Uweight/post4.html"><img class="d-flex" width="400"height="260" src="./images/Uweight/undwt_4.jpg" height="250px" alt="Generic placeholder image"></a>
+        <a href="./Uweight/post4.html"><img class="d-flex" style="width:300px;height:260px" src="./images/Uweight/undwt_4.jpg" height="250px" alt="Generic placeholder image"></a>
         <!-- <div class="circle">
             <h5 class="day">08</h5>
             <span class="month">July</span>
@@ -352,7 +352,7 @@
       <div class="row ">
     <div class="col-md-6">
       <div class="media blog-media">
-        <a href="./Uweight/post5.html"><img class="d-flex" width="400"height="260" src="./images/Uweight/undwt_5.jpg" alt="Generic placeholder image"></a>
+        <a href="./Uweight/post5.html"><img class="d-flex" style="width:300px;height:260px" src="./images/Uweight/undwt_5.jpg" alt="Generic placeholder image"></a>
         <!-- <div class="circle">
           <h5 class="day">08</h5>
           <span class="month">July</span>
@@ -366,7 +366,7 @@
     </div>
     <div class="col-md-6">
       <div class="media blog-media">
-        <a href="./Uweight/post6.html"><img class="d-flex" src="./images/Uweight/undwt_6.jpg" width="400"height="260" alt="Generic placeholder image"></a>
+        <a href="./Uweight/post6.html"><img class="d-flex" src="./images/Uweight/undwt_6.jpg" style="width:300px;height:260px" alt="Generic placeholder image"></a>
         <!-- <div class="circle">
             <h5 class="day">08</h5>
             <span class="month">July</span>
@@ -380,7 +380,7 @@
     </div>
     <div class="col-md-6">
       <div class="media blog-media">
-        <a href="./Uweight/post7.html"><img class="d-flex" src="./images/Uweight/undwt_7.jpg" width="400"height="260" alt="Generic placeholder image"></a>
+        <a href="./Uweight/post7.html"><img class="d-flex" src="./images/Uweight/undwt_7.jpg" style="width:300px;height:260px" alt="Generic placeholder image"></a>
         <!-- <div class="circle">
             <h5 class="day">08</h5>
             <span class="month">July</span>
@@ -394,7 +394,7 @@
     </div>
     <div class="col-md-6">
       <div class="media blog-media">
-        <a href="./Uweight/post8.html"><img class="d-flex" src="./images/Uweight/undwt_8.jpg" width="400"height="260" alt="Generic placeholder image"></a>
+        <a href="./Uweight/post8.html"><img class="d-flex" src="./images/Uweight/undwt_8.jpg" style="width:300px;height:260px" alt="Generic placeholder image"></a>
         <!-- <div class="circle">
             <h5 class="day">08</h5>
             <span class="month">July</span>
