--- a/Bmi_Obesity.html
+++ b/Bmi_Obesity.html
@@ -294,7 +294,7 @@
 		<div class="row ">
 			<div class="col-md-6">
 				<div class="media blog-media">
-				  <a href="./Obesity/obese1.html"><img class="d-flex" src="./images/Obesity/ob1.jpg"  width="400"height="260" alt="Eggs"></a>
+				  <a href="./Obesity/obese1.html"><img class="d-flex" src="./images/Obesity/ob1.jpg" style="width:300px;height:260px" alt="Eggs"></a>
 				  <!-- <div class="circle">
 				  	<h5 class="day">08</h5>
 				  	<span class="month">July</span>
@@ -308,7 +308,7 @@
 			</div>
 			<div class="col-md-6">
 				<div class="media blog-media">
-				  <a href="./Obesity/obese2.html"><img class="d-flex" src="./images/Obesity/ob2.jpg"  width="400"height="260" alt="Generic placeholder image"></a>
+				  <a href="./Obesity/obese2.html"><img class="d-flex" src="./images/Obesity/ob2.jpg"  style="width:300px;height:260px" alt="Generic placeholder image"></a>
 				  <!-- <div class="circle">
   				  	<h5 class="day">08</h5>
   				  	<span class="month">July</span>
@@ -322,7 +322,7 @@
 			</div>
 			<div class="col-md-6">
 				<div class="media blog-media">
-				  <a href="./Obesity/obese3.html"><img class="d-flex" src="./images/Obesity/ob3.jpg"  width="400"height="260" alt="Generic placeholder image"></a>
+				  <a href="./Obesity/obese3.html"><img class="d-flex" src="./images/Obesity/ob3.jpg"  style="width:300px;height:260px" alt="Generic placeholder image"></a>
 				  <!-- <div class="circle">
   				  	<h5 class="day">08</h5>
   				  	<span class="month">July</span>
@@ -336,7 +336,7 @@
 			</div>
 			<div class="col-md-6">
 				<div class="media blog-media">
-				  <a href="./Obesity/obese4.html"><img class="d-flex"  width="400"height="260" src="./images/Obesity/ob4.jpg" alt="Generic placeholder image"></a>
+				  <a href="./Obesity/obese4.html"><img class="d-flex"  style="width:300px;height:260px" src="./images/Obesity/ob4.jpg" alt="Generic placeholder image"></a>
 				  <!-- <div class="circle">
   				  	<h5 class="day">08</h5>
   				  	<span class="month">July</span>
@@ -352,7 +352,7 @@
         <div class="row ">
 			<div class="col-md-6">
 				<div class="media blog-media">
-				  <a href="./Obesity/obese5.html"><img  width="400"height="260" class="d-flex" src="./images/Obesity/ob5.jpg" alt="Generic placeholder image"></a>
+				  <a href="./Obesity/obese5.html"><img  style="width:300px;height:260px" class="d-flex" src="./images/Obesity/ob5.jpg" alt="Generic placeholder image"></a>
 				  <!-- <div class="circle">
 				  	<h5 class="day">08</h5>
 				  	<span class="month">July</span>
@@ -366,7 +366,7 @@
 			</div>
 			<div class="col-md-6">
 				<div class="media blog-media">
-				  <a href="./Obesity/obese6.html"><img class="d-flex" src="./images/Obesity/ob6.jpg"  width="400"height="260" alt="Generic placeholder image"></a>
+				  <a href="./Obesity/obese6.html"><img class="d-flex" src="./images/Obesity/ob6.jpg"  style="width:300px;height:260px" alt="Generic placeholder image"></a>
 				  <!-- <div class="circle">
   				  	<h5 class="day">08</h5>
   				  	<span class="month">July</span>
@@ -380,7 +380,7 @@
 			</div>
 			<div class="col-md-6">
 				<div class="media blog-media">
-				  <a href="./Obesity/obese7.html"><img class="d-flex" src="./images/Obesity/ob7.jpg"  width="400"height="260" alt="Generic placeholder image"></a>
+				  <a href="./Obesity/obese7.html"><img class="d-flex" src="./images/Obesity/ob7.jpg"  style="width:300px;height:260px" alt="Generic placeholder image"></a>
 				  <!-- <div class="circle">
   				  	<h5 class="day">08</h5>
   				  	<span class="month">July</span>
@@ -394,7 +394,7 @@
 			</div>
             <div class="col-md-6">
 				<div class="media blog-media">
-				  <a href="./Obesity/obese8.html"><img class="d-flex" src="./images/Obesity/ob8.jpg"  width="400"height="260" alt="Generic placeholder image"></a>
+				  <a href="./Obesity/obese8.html"><img class="d-flex" src="./images/Obesity/ob8.jpg"  style="width:300px;height:260px" alt="Generic placeholder image"></a>
 				  <!-- <div class="circle">
   				  	<h5 class="day">08</h5>
   				  	<span class="month">July</span>
@@ -410,7 +410,7 @@
     <div class="row ">
 			<div class="col-md-6">
 				<div class="media blog-media">
-				  <a href="./Obesity/obese9.html"><img class="d-flex" src="./images/Obesity/ob9.jpg"  width="400"height="260"alt="Generic placeholder image"></a>
+				  <a href="./Obesity/obese9.html"><img class="d-flex" src="./images/Obesity/ob9.jpg"  style="width:300px;height:260px" alt="Generic placeholder image"></a>
 				  <!-- <div class="circle">
 				  	<h5 class="day">08</h5>
 				  	<span class="month">July</span>
@@ -424,7 +424,7 @@
 			</div>
 			<div class="col-md-6">
 				<div class="media blog-media">
-				  <a href="./Obesity/obese10.html"><img class="d-flex" src="./images/Obesity/ob10.jpg" width="400"height="260"alt="Generic placeholder image"></a>
+				  <a href="./Obesity/obese10.html"><img class="d-flex" src="./images/Obesity/ob10.jpg" style="width:300px;height:260px" alt="Generic placeholder image"></a>
 				  <!-- <div class="circle">
   				  	<h5 class="day">08</h5>
   				  	<span class="month">July</span>
